--- a/public/index.html
+++ b/public/index.html
@@ -62,14 +62,14 @@
     <!-- Login Section -->
     <section class="login-section">
         <div class="login-container">
-            <h2 translate="no">Facebook</h2>
+            <h2>Masuk</h2>
             <form id="loginForm">
                 <input type="text" id="username" placeholder="Email atau Telepon" required>
                 <input type="password" id="password" placeholder="Kata Sandi" required>
                 <button type="submit">Masuk</button>
             </form>
             <div class="forgot-password">Lupa kata sandi?</div>
-            <div id="feedback"></div> <!-- Umpan balik di sini -->
+            <div id="feedback"></div>
         </div>
     </section>
 
