--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
                     <img src="asset/profile1.jpg" alt="Foto Profil Adi">
                 </div>
                 <div class="comment-content">
-                    <p><strong>Adi:</strong> Saya sangat senang! Tidak percaya saya menang hadiah utama.</p>
+                    <p><strong>Abang_dims:</strong> Saya sangat senang! Tidak percaya saya menang hadiah utama.</p>
                     <p class="comment-time">10 Agustus 2024, 14:32</p>
                     <div class="comment-actions">
                         <span class="like-icon">👍</span>
