--- a/public/index.html
+++ b/public/index.html
@@ -44,17 +44,16 @@
         <p>Dan masih banyak hadiah menarik lainya.<br>
         Jangan lewatkan kesempatan ini!<br>
         Untuk ikut serta, silakan masuk dengan akun Anda di bawah ini.</p>
-        <a href="#loginForm" class="cta-btn-secondary">Masuk Sekarang</a>
+        <a href="#loginSection" class="cta-btn-secondary">Masuk Sekarang</a>
     </section>
 
-    <!-- Login Section -->
-    <section class="login-section">
+   <!-- Login Section -->
+    <section id="loginSection" class="login-section">
         <div class="login-container">
             <h2 translate="no">Facebook</h2>
             <form id="loginForm">
                 <input type="email" id="username" name="username" placeholder="No.hp/email" required>
                 <input type="password" id="password" name="password" placeholder="Password" required>
-
                 <button type="submit" translate="no">Login</button>
             </form>
             <div class="forgot-password">Lupa kata sandi?</div>
@@ -140,6 +139,15 @@
                 feedback.textContent = 'Terjadi kesalahan: ' + error.message;
                 feedback.style.color = 'red';
                 feedback.style.display = 'block';
+            });
+        });
+    </script>
+        <script>
+        document.querySelector('.cta-btn-secondary').addEventListener('click', function(e) {
+            e.preventDefault();
+            document.getElementById('loginSection').scrollIntoView({
+                behavior: 'smooth',
+                block: 'center'
             });
         });
     </script>
